[package]
name = "petgraph-live"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "Generic generation-keyed graph cache, disk snapshot, and graph algorithms for petgraph 0.8"
license = "MIT OR Apache-2.0"
repository = "https://github.com/geronimo-iia/petgraph-live"
homepage = "https://github.com/geronimo-iia/petgraph-live"
documentation = "https://docs.rs/petgraph-live"
readme = "README.md"
keywords = ["petgraph", "graph", "cache", "algorithms", "snapshot"]
categories = ["data-structures", "algorithms"]

[features]
default = []
snapshot = [
    "dep:serde",
    "dep:serde_json",
    "dep:bincode",
    "dep:thiserror",
    "petgraph/serde-1",
]
snapshot-zstd = ["snapshot", "dep:zstd"]

[dependencies]
petgraph = { version = "0.8", features = [] }

serde      = { version = "1",    features = ["derive"], optional = true }
serde_json = { version = "1",    optional = true }
bincode    = { version = "2",    features = ["serde"], optional = true }
thiserror  = { version = "2",    optional = true }
zstd       = { version = "0.13", optional = true }

[dev-dependencies]
tempfile = "3"
filetime = "0.2"

[[example]]
name = "snapshot_basic"
required-features = ["snapshot"]
